--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,8 +97,9 @@ LastLevel=/Game/Maps/Main_Map
 [AssetEditorManager]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/Assets/Material/Bumper_Material.Bumper_Material
-OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
 OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_PopBumperBase.SM_PopBumperBase
+OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
+OpenAssetsAtExit=/Game/Assets/Sounds/BumperHit_SoundCue.BumperHit_SoundCue
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -554,10 +555,46 @@ MaterialExpressionScalarParameter.General=True
 MaterialExpressionScalarParameter.MaterialExpressionScalarParameter=True
 MaterialExpressionScalarParameter.MaterialExpression=True
 MaterialExpressionReroute.MaterialExpression=True
+K2Node_Timeline.GraphNodeDetail=True
+PointLightComponent.Variable=True
+PointLightComponent.TransformCommon=True
+PointLightComponent.Sockets=True
+PointLightComponent.Light=True
+PointLightComponent.Rendering=True
+PointLightComponent.Lightmass=True
+PointLightComponent.Performance=True
+PointLightComponent.LightFunction=True
+PointLightComponent.DistanceFieldShadows=True
+PointLightComponent.Light Profiles=True
+PointLightComponent.Tags=True
+PointLightComponent.ComponentReplication=True
+PointLightComponent.Cooking=True
+PointLightComponent.Events=True
+PointLightComponent.Collision=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+Bumper_BP_C.Default=True
+Bumper_BP_C.HLOD=True
+SoundCue.Attenuation=True
+SoundCue.AttenuationDistance=True
+SoundCue.AttenuationSpatialization=True
+SoundCue.Sound=True
+SoundCue.AttenuationAirAbsorption=True
+SoundCue.Subtitles=True
+SoundCue.AttenuationListenerFocus=True
+SoundCue.Debug=True
+SoundCue.AttenuationOcclusion=True
+SoundCue.Concurrency=True
+SoundCue.Effects=True
+SoundCue.Info=True
+SoundNodeRandom.Random=True
+SoundNodeModulator.Modulation=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -581,7 +618,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
+ContentBrowserTab1.SelectedPaths=/Game/Assets/Sounds
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -682,7 +719,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [MaterialEditor]
-PrimType=3
+PrimType=1
 
 [Directories2]
 UNR=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/Maps
@@ -1262,5 +1299,21 @@ TextureEditor.LastCompileMethod=Unknown
 /Game/Blueprints/Bumper_BP.Bumper_BP=1
 /Game/Assets/StaticMesh/SM_PopBumperBase.SM_PopBumperBase=1
 /Game/Assets/Textures/T_PopBumperTop_Unreal.T_PopBumperTop_Unreal=0
+/Game/Assets/Material/Bumper_Material.Bumper_Material=1
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
