--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,11 +95,13 @@ LodDistance7=0.000000
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Material/Bumper_Material.Bumper_Material
-OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_PopBumperBase.SM_PopBumperBase
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Yellow_Material_Inst.PlasticSimple_Yellow_Material_Inst
+OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_White_Material_Inst.PlasticSimple_White_Material_Inst
+OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Material.PlasticSimple_Material
+OpenAssetsAtExit=/Game/Blueprints/Flipper_BP.Flipper_BP
+OpenAssetsAtExit=/Game/Assets/Material/BallSphere_SimpleMetal_Material.BallSphere_SimpleMetal_Material
 OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
-OpenAssetsAtExit=/Game/Assets/Sounds/BumperHit_SoundCue.BumperHit_SoundCue
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -591,6 +593,23 @@ SoundCue.Effects=True
 SoundCue.Info=True
 SoundNodeRandom.Random=True
 SoundNodeModulator.Modulation=True
+Flipper_BP_C.Tick=True
+Flipper_BP_C.Rendering=True
+Flipper_BP_C.Replication=True
+Flipper_BP_C.Input=True
+Flipper_BP_C.Actor=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+Flipper_BP_C.TransformCommon=True
+Flipper_BP_C.Default=True
+ObjectProperty.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+MaterialEditorInstanceConstant.ParameterGroups=True
+MaterialEditorInstanceConstant.General=True
+MaterialEditorInstanceConstant.Previewing=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
@@ -600,8 +619,9 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.G
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
+StaticMesh=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+MaterialEditorInstanceConstant=
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -635,7 +655,7 @@ VertexColorImportOption=Ignore
 VertexOverrideColor=(B=255,G=255,R=255,A=255)
 bGenerateLightmapUVs=True
 bOneConvexHullPerUCX=True
-bAutoGenerateCollision=False
+bAutoGenerateCollision=True
 bCombineMeshes=False
 bTransformVertexToAbsolute=True
 bBakePivotInVertex=False
@@ -693,6 +713,7 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Flipper_BP.Flipper_BP;
 RecentlyPlaced=/Game/Blueprints/Bumper_BP.Bumper_BP;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_PopBumperMechanism.SM_PopBumperMechanism;
 RecentlyPlaced=/Game/Assets/StaticMesh/SM_PopBumperBase.SM_PopBumperBase;
@@ -1300,6 +1321,9 @@ TextureEditor.LastCompileMethod=Unknown
 /Game/Assets/StaticMesh/SM_PopBumperBase.SM_PopBumperBase=1
 /Game/Assets/Textures/T_PopBumperTop_Unreal.T_PopBumperTop_Unreal=0
 /Game/Assets/Material/Bumper_Material.Bumper_Material=1
+/Game/Assets/Sounds/BumperHit_SoundCue.BumperHit_SoundCue=1
+/Game/Assets/StaticMesh/Flipper.Flipper=0
+/Game/Blueprints/FlipperType_Enum.FlipperType_Enum=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1315,5 +1339,9 @@ bPromptBeforeAutoImporting=True
 bDeleteSourceFilesWithAssets=False
 bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
+
+[DetailCustomWidgetExpansion]
+MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 
 
