--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ LodDistance7=0.000000
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Yellow_Material_Inst.PlasticSimple_Yellow_Material_Inst
 OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_White_Material_Inst.PlasticSimple_White_Material_Inst
 OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Material.PlasticSimple_Material
@@ -621,7 +621,7 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMesh=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-MaterialEditorInstanceConstant=
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -638,7 +638,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/Sounds
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1343,5 +1343,11 @@ bSCCUseGlobalSettings=False
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+
+[MaterialInstanceEditor]
+bShowGrid=False
+bDrawGrid=False
+PrimType=1
+bWantsMobileStats=False
 
 
