018 Pinball - User Interaction  Player Controllers

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,13 +95,11 @@ LodDistance7=0.000000
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Yellow_Material_Inst.PlasticSimple_Yellow_Material_Inst
-OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_White_Material_Inst.PlasticSimple_White_Material_Inst
-OpenAssetsAtExit=/Game/Assets/Material/PlasticSimple_Material.PlasticSimple_Material
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BallSphere_BP.BallSphere_BP
 OpenAssetsAtExit=/Game/Blueprints/Flipper_BP.Flipper_BP
-OpenAssetsAtExit=/Game/Assets/Material/BallSphere_SimpleMetal_Material.BallSphere_SimpleMetal_Material
-OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
+OpenAssetsAtExit=/Game/Blueprints/GameMode_BP.GameMode_BP
+OpenAssetsAtExit=/Game/Blueprints/PlayerController_BP.PlayerController_BP
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -610,6 +608,34 @@ EdGraphNode_Comment.Comment=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=True
+Actor.TransformCommon=True
+Actor.Actor=True
+PlayerController_BP_C.PlayerController=True
+PlayerController_BP_C.Tick=True
+PlayerController_BP_C.Cheat Manager=True
+PlayerController_BP_C.MouseInterface=True
+PlayerController_BP_C.Game=True
+PlayerController_BP_C.Controller=True
+PlayerController_BP_C.Replication=True
+PlayerController_BP_C.Input=True
+PlayerController_BP_C.Actor=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+K2Node_InputAction.Input=True
+WorldSettings.World=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.Physics=True
+WorldSettings.Rendering=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.VR=True
+WorldSettings.Tick=True
+GameMode_BP_C.Tick=True
+GameMode_BP_C.Classes=True
+GameMode_BP_C.Game=True
+GameMode_BP_C.GameMode=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
@@ -648,6 +674,8 @@ ContentBrowserTab1.CurrentViewType=1
 [DetailCategoriesAdvanced]
 FbxImportUI.Mesh=True
 CapsuleComponent.Shape=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -1324,6 +1352,11 @@ TextureEditor.LastCompileMethod=Unknown
 /Game/Assets/Sounds/BumperHit_SoundCue.BumperHit_SoundCue=1
 /Game/Assets/StaticMesh/Flipper.Flipper=0
 /Game/Blueprints/FlipperType_Enum.FlipperType_Enum=0
+/Game/Assets/Material/PlasticSimple_Yellow_Material_Inst.PlasticSimple_Yellow_Material_Inst=1
+/Game/Assets/Material/PlasticSimple_White_Material_Inst.PlasticSimple_White_Material_Inst=1
+/Game/Assets/Material/PlasticSimple_Material.PlasticSimple_Material=1
+/Game/Blueprints/Flipper_BP.Flipper_BP=1
+/Game/Assets/Material/BallSphere_SimpleMetal_Material.BallSphere_SimpleMetal_Material=1
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
