--- a/Pinball/Config/DefaultEngine.ini
+++ b/Pinball/Config/DefaultEngine.ini
@@ -6,6 +6,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/Main_Map.Main_Map
+GameDefaultMap=/Game/Maps/Main_Map.Main_Map
+GlobalDefaultGameMode=/Game/Blueprints/GameMode_BP.GameMode_BP_C
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -46,8 +51,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Main_Map.Main_Map
-GameDefaultMap=/Game/Maps/Main_Map.Main_Map
 
