--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,7 +95,7 @@ LodDistance7=0.000000
 LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/BallSphere_BP.BallSphere_BP
 OpenAssetsAtExit=/Game/Blueprints/Flipper_BP.Flipper_BP
 OpenAssetsAtExit=/Game/Blueprints/GameMode_BP.GameMode_BP
@@ -648,6 +648,7 @@ EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 StaticMesh=
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
+InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[3]\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1376,6 +1377,61 @@ bSCCUseGlobalSettings=False
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
+GeneralProjectSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameMapsSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MoviePlayerSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ProjectPackagingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HardwareTargetingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AssetManagerSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AISystem=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AnimationSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AudioSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CollisionProfile=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ConsoleSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CookerSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+CrowdManager=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EndUserSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GameplayDebuggerConfig=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+GarbageCollectionSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+Engine=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+InputSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RecastNavMesh=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NavigationSystem=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+NetworkSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PhysicsSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+RendererOverrideSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+SlateSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+StreamingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TutorialSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UserInterfaceSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelEditor2DSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+EditorProjectAppearanceSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+BlueprintEditorProjectSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ClassViewerProjectSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MovieSceneToolsProjectSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MeshSimplificationSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperImporterSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UMGEditorProjectSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidRuntimeSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ShaderPlatformQualitySettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AndroidSDKSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+HTML5TargetSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+IOSRuntimeSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LinuxTargetSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+MacTargetSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WindowsTargetSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+AvfMediaSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+ImgMediaSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+LevelSequenceEditorSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+OculusHMDRuntimeSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+TcpMessagingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+UdpMessagingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WmfMediaSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
+WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 
 [MaterialInstanceEditor]
 bShowGrid=False
