028 Pinball - Child Actors Part A

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,9 +97,7 @@ LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Rail_BP.Rail_BP
-OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_PlasticRamp.SM_PlasticRamp
-OpenAssetsAtExit=/Game/Assets/StaticMesh/SM_PlasticRamp_End.SM_PlasticRamp_End
+OpenAssetsAtExit=/Game/Blueprints/VariableBand_BP.VariableBand_BP
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -927,16 +925,23 @@ SplineComponent.Events=True
 SplineMeshComponent.Materials=True
 Rail_BP_C.TransformCommon=True
 Rail_BP_C.Default=True
+VariableBand_BP_C.Tick=True
+VariableBand_BP_C.Rendering=True
+VariableBand_BP_C.Replication=True
+VariableBand_BP_C.Input=True
+VariableBand_BP_C.Actor=True
+VariableBand_BP_C.TransformCommon=True
+VariableBand_BP_C.Default=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
-Object=
+Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-StaticMesh=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Console.ConsoleKeys\" "
@@ -963,11 +968,11 @@ UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer
 AndroidRuntimeSettings="\"Object.AdvancedAPKPackaging.GoogleVRCaps\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 BallSphere_BP_C="\"Object.Replication.ReplicatedMovement\" "
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
+SceneComponent="\"Object.RelativeLocation\" \"Object.RelativeLocation\" "
+ActorComponent="\"Object.RelativeLocation\" \"Object.RelativeLocation\" "
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -985,6 +990,7 @@ TextLayoutWidget="\"Object.Appearance.Font\" "
 Widget=
 Visual=
 SplineMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+VariableBand_BP_C=
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1001,7 +1007,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Assets/StaticMesh
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -1083,6 +1089,7 @@ bConvertSceneUnit=False
 LastLogListing=FBXImport
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/VariableBand_BP.VariableBand_BP;
 RecentlyPlaced=/Game/Blueprints/Rail_BP.Rail_BP;
 RecentlyPlaced=/Game/Blueprints/BallResetZone_BP.BallResetZone_BP;
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
@@ -1121,7 +1128,7 @@ UNR=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject
 BRUSH=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 FBX=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 FBXAnim=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
-GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/SM_PlasticRamp.FBX
+GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/SM_BandExtender.FBX
 GenericExport=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 GenericOpen=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 GenericSave=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
@@ -1728,6 +1735,12 @@ UATHelper.LastCompileMethod=Unknown
 /Game/Assets/StaticMesh/SM_RailMouth.SM_RailMouth=1
 /Game/Assets/StaticMesh/SM_RailRing.SM_RailRing=1
 /Game/Assets/StaticMesh/SM_PopBumperMechanism.SM_PopBumperMechanism=1
+/Game/Blueprints/Rail_BP.Rail_BP=1
+/Game/Assets/StaticMesh/SM_PlasticRamp.SM_PlasticRamp=1
+/Game/Assets/StaticMesh/SM_PlasticRamp_End.SM_PlasticRamp_End=1
+/Game/Assets/StaticMesh/SM_BandExtender.SM_BandExtender=0
+/Game/Assets/StaticMesh/VariableBand_BP.VariableBand_BP=0
+/Game/Assets/StaticMesh/SM_PostHalf.SM_PostHalf=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1802,14 +1815,17 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSett
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Charge Plunger,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings.Bindings.ActionMappings.RightFlipper,InputSettings.Bindings.ActionMappings,GameMapsSettings.DefaultModes.SelectedGameModeDetails,InputSettings.Bindings.ActionMappings.Charge Plunger,IOSRuntimeSettings.Build.Remote Build Options,PhysicsSettings.Physical Surface.PhysicalSurfaceList,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
-StructProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+StructProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Plunger_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=
+K2Node_VariableGet=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 HighScoreSave_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-K2Node_VariableSet=
+K2Node_VariableSet=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+VariableBand_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 bShowGrid=False
