029 Pinball - Child Actors Part B

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,7 +97,7 @@ LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/VariableBand_BP.VariableBand_BP
+OpenAssetsAtExit=/Game/Blueprints/VariableBand_BP_Child_DropTargetSet.VariableBand_BP_Child_DropTargetSet
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -932,16 +932,47 @@ VariableBand_BP_C.Input=True
 VariableBand_BP_C.Actor=True
 VariableBand_BP_C.TransformCommon=True
 VariableBand_BP_C.Default=True
+DropTarget_BP_C.Tick=True
+DropTarget_BP_C.Rendering=True
+DropTarget_BP_C.Replication=True
+DropTarget_BP_C.Input=True
+DropTarget_BP_C.Actor=True
+DropTarget_BP_C.TransformCommon=True
+TextRenderComponent.Variable=True
+TextRenderComponent.TransformCommon=True
+TextRenderComponent.Sockets=True
+TextRenderComponent.Materials=True
+TextRenderComponent.Text=True
+TextRenderComponent.Rendering=True
+TextRenderComponent.Lighting=True
+TextRenderComponent.Tags=True
+TextRenderComponent.ComponentReplication=True
+TextRenderComponent.Cooking=True
+TextRenderComponent.Events=True
+VariableBand_BP_Child_DropTargetSet_C.Tick=True
+VariableBand_BP_Child_DropTargetSet_C.Default=True
+VariableBand_BP_Child_DropTargetSet_C.Rendering=True
+VariableBand_BP_Child_DropTargetSet_C.Replication=True
+VariableBand_BP_Child_DropTargetSet_C.Input=True
+VariableBand_BP_Child_DropTargetSet_C.Actor=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Variable=True
+ChildActorComponent.Cooking=True
+VariableBand_BP_Child_DropTargetSet_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
-Object="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.Blueprints\" \"Object.AutoSave\" "
 LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" \"Object.GridSnapping.DecimalGridIntervals\" \"Object.GridSnapping.CommonRotGridSizes\" \"Object.Preview.PreviewMeshes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation.BuildPromotionTest\" \"Object.Automation.BuildPromotionTest.ImportWorkflow\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Diffuse\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Normal\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.StaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.ReimportStaticMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.BlendShapeMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.MorphMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SkeletalMesh\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Animation\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.Sound\" \"Object.Automation.BuildPromotionTest.ImportWorkflow.SurroundSound\" \"Object.Automation.BuildPromotionTest.OpenAssets\" \"Object.Automation.BuildPromotionTest.NewProjectSettings\" \"Object.Automation.MaterialEditorPromotionTest\" \"Object.Automation.BlueprintEditorPromotionTest\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Console.ConsoleKeys\" "
@@ -971,8 +1002,8 @@ BallSphere_BP_C="\"Object.Replication.ReplicatedMovement\" "
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
-SceneComponent="\"Object.RelativeLocation\" \"Object.RelativeLocation\" "
-ActorComponent="\"Object.RelativeLocation\" \"Object.RelativeLocation\" "
+SceneComponent=
+ActorComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BoxComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -991,6 +1022,8 @@ Widget=
 Visual=
 SplineMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 VariableBand_BP_C=
+VariableBand_BP_Child_DropTargetSet_C=
+DropTarget_BP_C="\"Object.DropLetter\" \"Object.DropLetter\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1011,7 +1044,7 @@ ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
-ContentBrowserTab1.ThumbnailSizeScale=0.180000
+ContentBrowserTab1.ThumbnailSizeScale=0.400000
 ContentBrowserTab1.CurrentViewType=1
 GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
@@ -1086,9 +1119,11 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/VariableBand_BP_Child_DropTargetSet.VariableBand_BP_Child_DropTargetSet;
+RecentlyPlaced=/Game/Blueprints/DropTarget_BP.DropTarget_BP;
 RecentlyPlaced=/Game/Blueprints/VariableBand_BP.VariableBand_BP;
 RecentlyPlaced=/Game/Blueprints/Rail_BP.Rail_BP;
 RecentlyPlaced=/Game/Blueprints/BallResetZone_BP.BallResetZone_BP;
@@ -1128,7 +1163,7 @@ UNR=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject
 BRUSH=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 FBX=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 FBXAnim=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
-GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/SM_BandExtender.FBX
+GenericImport=E:/Tutorial/Unreal Tutorial/Unreal Engine 4 How to Develop Your First Two Games/02 Developing a game of Pinball/PinballAssets/PinballAssets/SM_DropTarget.FBX
 GenericExport=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 GenericOpen=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
 GenericSave=D:/Github/Unreal-Engine-4-How-to-Develop-Your-First-Two-Games-PinballProject/Pinball/Content/
@@ -1741,6 +1776,9 @@ UATHelper.LastCompileMethod=Unknown
 /Game/Assets/StaticMesh/SM_BandExtender.SM_BandExtender=0
 /Game/Assets/StaticMesh/VariableBand_BP.VariableBand_BP=0
 /Game/Assets/StaticMesh/SM_PostHalf.SM_PostHalf=0
+/Game/Assets/StaticMesh/SM_DropTarget.SM_DropTarget=0
+/Game/Blueprints/DropTarget_BP.DropTarget_BP=0
+/Game/Blueprints/VariableBand_BP.VariableBand_BP=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1817,12 +1855,12 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.LeftFlipper,InputSettings
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 StructProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 Plunger_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Collision.Collision,
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 HighScoreSave_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
 ArrayProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,ArrayProperty.DefaultValueCategory.None,
-K2Node_VariableSet=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableSet=
 VariableBand_BP_C=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ObjectProperty=StructProperty.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 SceneComponent=K2Node_VariableGet.DefaultValueCategory.None,
