030 Pinball - Event Dispatchers - Doesn't work lol

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,7 +97,9 @@ LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/DropTarget_BP.DropTarget_BP
 OpenAssetsAtExit=/Game/Blueprints/VariableBand_BP_Child_DropTargetSet.VariableBand_BP_Child_DropTargetSet
+OpenAssetsAtExit=/Game/Blueprints/GameMode_BP.GameMode_BP
 
 [DetailCategories]
 EditorStyleSettings.Colors=True
@@ -963,6 +965,9 @@ ChildActorComponent.ComponentReplication=True
 ChildActorComponent.Variable=True
 ChildActorComponent.Cooking=True
 VariableBand_BP_Child_DropTargetSet_C.TransformCommon=True
+DropTarget_BP_C.Default=True
+MulticastDelegateProperty.Delegate=True
+MulticastDelegateProperty.DelegateInputs=True
 
 [DetailPropertyExpansion]
 EditorStyleSettings="\"Object.Colors.EditorMainWindowBackgroundOverride\" \"Object.Colors.EditorChildWindowBackgroundOverride\" "
@@ -1023,7 +1028,7 @@ Visual=
 SplineMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 VariableBand_BP_C=
 VariableBand_BP_Child_DropTargetSet_C=
-DropTarget_BP_C="\"Object.DropLetter\" \"Object.DropLetter\" "
+DropTarget_BP_C=
 
 [ContentBrowser]
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -1779,6 +1784,7 @@ UATHelper.LastCompileMethod=Unknown
 /Game/Assets/StaticMesh/SM_DropTarget.SM_DropTarget=0
 /Game/Blueprints/DropTarget_BP.DropTarget_BP=0
 /Game/Blueprints/VariableBand_BP.VariableBand_BP=0
+/Game/Blueprints/VariableBand_BP_Child_DropTargetSet.VariableBand_BP_Child_DropTargetSet=0
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
