033 Pinball - Dynamic Audio Components

--- a/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Pinball/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,6 +131,11 @@ LastLevel=/Game/Maps/Main_Map
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Plunger_BP.Plunger_BP
+OpenAssetsAtExit=/Game/Blueprints/BallSphere_BP.BallSphere_BP
+OpenAssetsAtExit=/Game/Blueprints/GameMode_BP.GameMode_BP
+OpenAssetsAtExit=/Game/Blueprints/PlayerController_BP.PlayerController_BP
+OpenAssetsAtExit=/Game/Blueprints/Bumper_BP.Bumper_BP
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -530,6 +535,49 @@ BallSphere_BP_C.Input=True
 BallSphere_BP_C.Actor=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
+SoundNodeWavePlayer.WavePlayer=True
+SoundNodeLooping.Looping=True
+AudioComponent.Variable=True
+AudioComponent.TransformCommon=True
+AudioComponent.Sockets=True
+AudioComponent.Sound=True
+AudioComponent.AttenuationDistance=True
+AudioComponent.Attenuation=True
+AudioComponent.AttenuationSpatialization=True
+AudioComponent.Filter=True
+AudioComponent.AttenuationAirAbsorption=True
+AudioComponent.AttenuationListenerFocus=True
+AudioComponent.Modulation=True
+AudioComponent.AttenuationOcclusion=True
+AudioComponent.Concurrency=True
+AudioComponent.Tags=True
+AudioComponent.ComponentReplication=True
+AudioComponent.Activation=True
+AudioComponent.Cooking=True
+AudioComponent.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+K2Node_VariableGet.DefaultValueCategory=True
+Plunger_BP_C.Tick=True
+Plunger_BP_C.Default=True
+Plunger_BP_C.Rendering=True
+Plunger_BP_C.Replication=True
+Plunger_BP_C.Input=True
+Plunger_BP_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+PlayerController_BP_C.PlayerController=True
+PlayerController_BP_C.Tick=True
+PlayerController_BP_C.Cheat Manager=True
+PlayerController_BP_C.MouseInterface=True
+PlayerController_BP_C.Game=True
+PlayerController_BP_C.Controller=True
+PlayerController_BP_C.Replication=True
+PlayerController_BP_C.Input=True
+PlayerController_BP_C.Actor=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [DetailPropertyExpansion]
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" "
@@ -564,6 +612,8 @@ AutomationTestSettings="\"Object.Loading.EditorTestModules\" \"Object.Automation
 /Game/Assets/Sounds/Pinball_BallLoose_Cue.Pinball_BallLoose_Cue=1
 /Game/Blueprints/BallSphere_BP.BallSphere_BP=1
 /Game/Assets/Sounds/SP08_Convoy_Chase_exp.SP08_Convoy_Chase_exp=1
+/Game/Assets/Sounds/Pinball_Rolling01.Pinball_Rolling01=0
+/Game/Assets/Sounds/Pinball_Rolling01_Cue.Pinball_Rolling01_Cue=0
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=165.000
